--- a/web/css/blog.css
+++ b/web/css/blog.css
@@ -1,6 +1,6 @@
 body
 {
-background-image: url('/images/tausta.jpg');
+background-image: url('/images/tausta.jpg') no-repeat fixed top center;
 }
 
 #page
