--- a/web/css/blog.css
+++ b/web/css/blog.css
@@ -55,7 +55,7 @@ background-attachment:fixed;
 {
 	float: left;
 	width: 1000px;
-	background: #fff url(/wp-content/uploads/layout-three-fixed-background.gif) repeat-y 100% 0;
+	background: #fff;
 }
 
 #leftside
@@ -86,6 +86,18 @@ background-attachment:fixed;
 	padding: 20px 0;
 	margin: 0 0px 0 0;
 	display: inline;
+}
+
+
+.calendar-indent
+{
+    margin: 0 10px;
+}
+
+.blog-entry
+{
+    cursor: hand; 
+    cursor: pointer;
 }
 
 #calendar h2
