--- a/web/css/blog.css
+++ b/web/css/blog.css
@@ -26,7 +26,7 @@ background-attachment:fixed;
 {
     width: 1000px;
     height: 142px;
-background-image: url('../images/headertausta.png');
+background-image: url('../images/headertausta.jpg');
 color: white;
 
 }
@@ -88,7 +88,7 @@ color: white;
 }
 
 
-#blog
+#blogarea
 {
 	float: left;
 	width: 500px;
