--- a/src/main/webapp/css/blog.css
+++ b/src/main/webapp/css/blog.css
@@ -1,6 +1,10 @@
+.ajaxload 
+{ 
+    background: url('/images/ajax-loader.gif') no-repeat 2px 4px; 
+    padding-left: 18px; 
+}
 body
 {
-    //background-image: url('../images/tausta.jpg');
     background-repeat:no-repeat;
     background-attachment:fixed;
     margin: 10px;
@@ -27,7 +31,7 @@ body
 {
     width: 100%;
     height: 40px;
-    background-image: url('../images/kauaspoistausta.jpg');
+    background-image: url('../images/background.jpg');
     color: white;
 
 }
@@ -66,7 +70,7 @@ body
 {
     float: left;
     width: 500px;
-    padding: 20px 0;
+    padding: 20px;
     background: #fff;
 }
 
