--- a/src/main/webapp/css/blog.css
+++ b/src/main/webapp/css/blog.css
@@ -31,7 +31,7 @@ body
 {
     width: 100%;
     height: 40px;
-    background-image: url('../images/background.jpg');
+    background-image: url('/images/background.jpg');
     color: white;
 
 }
